apps/goatlint/src/snapshots/fixtures__cli__tsgolint_-c config-type-aware.json@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: -c config-type-aware.json
working directory: fixtures/cli/tsgolint
----------

  ! typescript-eslint(no-floating-promises): Promises must be awaited, add void operator to ignore.
   ,-[no-floating-promises.ts:2:1]
 1 | const promise = new Promise((resolve, _reject) => resolve("value"));
 2 | promise;
   : ^^^^^^^^
 3 | 
   `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[non-tsgolint.ts:1:1]
 1 | debugger;
   : ^^^^^^^^^
 2 | 
   `----
  help: Remove the debugger statement

  ! typescript-eslint(no-floating-promises): Promises must be awaited, add void operator to ignore.
   ,-[prefer-promise-reject-errors.ts:1:1]
 1 | Promise.reject('error');
   : ^^^^^^^^^^^^^^^^^^^^^^^^
   `----
  help: The promise must end with a call to .catch, or end with a call to .then with a rejection handler, or be explicitly marked as ignored with the `void` operator.

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[test.svelte:2:2]
 1 | <script>
 2 |     debugger;
   :     ^^^^^^^^^
 3 | 
   `----
  help: Remove the debugger statement

Found 2 warnings and 2 errors.
Finished in <variable>ms on 68 files with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
